# Summer2022-Andersson-Group

./: README.md  index.md
offboard_test_new/: CMakeLists.txt  README.md  analyze.py  boxAndWhiskerTrackErrorData.csv  ghostTrack.py  package.xml  quadBash.sh
offboard_test_new/launch/: README.txt  extractImages.launch  face_tracking_demo.launch  hover.launch  land_safely.launch  multi_px4.launch  px4.launch  px4_sim.launch  quad_tracking_demo.launch  revolve.launch  rise.launch  simPose.launch  vrpn.launch  vrpn_px4.launch  vrpn_px4_leadFollow.launch  waypoints.launch
offboard_test_new/logsDelorian/: commandLog20200103_160112.txt  commandLog20200113_145331.txt  commandLog20200113_152141.txt  commandLog20200115_123103.txt  commandLog20200115_142337.txt  commandLog20200115_150937.txt  commandLog20200122_094143.txt  commandLog20200122_103439.txt  commandLog20200122_105911.txt  commandLog20200122_111345.txt  commandLog20200122_112240.txt  commandLog20200126_103335.txt  commandLog20200126_105102.txt  commandLog20200127_095250.txt  commandLog20200127_100216.txt  commandLog20200127_103507.txt  commandLog20200127_112256.txt  commandLog20200127_125320.txt  commandLog20200127_130235.txt  commandLog20200203_150137.txt  commandLog20200203_151334.txt  commandLog20200203_152247.txt  commandLog20200203_154242.txt  commandLog20200203_155410.txt  commandLog20200205_132424.txt  commandLog20200205_135224.txt  commandLog20200205_140510.txt  commandLog20200210_150521.txt  trackerLog20200103_140139.txt  trackerLog20200103_160112.txt  (+27 more)
wireless_com/: CMakeLists.txt  README.txt  package.xml
(+64 files in other folders)
